--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,8 @@ main:
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "Facebook"
     url: https://www.facebook.com/
-
+  - title: "Tags"
+    url: /tags/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
