--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links
 main:
 
-  # - title: "Quick-Start Guide"
-  #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "Posts"
+    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
 
   # - title: "Sample Posts"
   #   url: /year-archive/
