--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,10 @@ main:
 
   - title: "Posts"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-
+  - title: "Tags"
+    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "Quickstart- Guide"
+    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
