--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,9 @@
 main:
 
   - title: "Posts"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+    url: /posts/
   - title: "Tags"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+    url: /tags/
   - title: "Quickstart- Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "Sample Posts"
