--- a/_config.yml
+++ b/_config.yml
@@ -130,9 +130,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
-# Site header:
+# Site Header:
 header:  
-  image: /assets/images/cover.jpg
+  image: "/assets/images/cover.jpg"
 # Site Footer
 footer:
   links:
