--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,8 @@ author:
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
 # Site Header:
-
+header:
+  overlay_image: /assets/images/backgound.jpg
 # Site Footer
 footer:
   links:
