--- a/_config.yml
+++ b/_config.yml
@@ -132,7 +132,7 @@ author:
       # url: "https://instagram.com/"
 # Site Header:
 header:
-  overlay_image: /assets/images/backgound.jpg
+  overlay_image: /assets/images/cover.jpg
 # Site Footer
 footer:
   links:
