--- a/_config.yml
+++ b/_config.yml
@@ -133,6 +133,11 @@ author:
 # Site Header:
 header:
   overlay_image: /assets/images/cover.jpg
+  overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  actions:
+    - label: "More Info"
+      url: "https://unsplash.com"
 # Site Footer
 footer:
   links:
@@ -154,7 +159,6 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url:
-background: "/assets/images/cover.jpg"
 
 # Reading Files
 include:
