--- a/_config.yml
+++ b/_config.yml
@@ -206,6 +206,7 @@ kramdown:
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
+  toc: true
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
