--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Gọt Khoai"
 title_separator          : "-"
 name                     : "Lê Huỳnh Đức"
 description              : "We will change the world."
-url                      :  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "lehuynhduc.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "lhduc94" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
